# crypto_converter

./: .coveragerc  .editorconfig  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
crypto_converter/: log.py  main.py  settings.py  utils.py
crypto_converter/api/: app.py  handler.py  log.py  main.py  middleware.py  models.py  router.py
crypto_converter/quote_consumer/: consumer.py  log.py  main.py  types.py  utils.py
crypto_converter/quote_consumer/abstract/: client.py  gateway.py  transport.py
crypto_converter/quote_consumer/gateway/: __init__.py  bybit.py
crypto_converter/quote_consumer/transport/: __init__.py  proxy.py  websocket.py
logs/api/: README.md
logs/quote_consumer/: README.md
tests/: test_main.py
tests/transport/: test_proxy.py  test_websocket.py
