[project]
name = "crypto-converter"
version = "0.0.1"
description = "Crypto converter server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
]

[dependency-groups]
dev = [
    "isort==6.0.1",
    "pre-commit==4.2.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff==0.12.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"
unsafe-fixes = false

[tool.ruff.lint]
select = ["ALL"]
ignore = ["CPY001", "D104", "D211", "D213", "D203", "COM812", "ANN401", "FBT001"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D103", "D100", "SLF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.isort]
profile = "black"
line_length = 88
